# crate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PERFORMANCE.md  README.md  crate  docker-compose.dev.yaml  docker-compose.full.yaml  docker-compose.home.yaml  docker-compose.live.yaml  docker-compose.local-stack.yaml  docker-compose.override.yaml  docker-compose.project.yaml  docker-compose.readplane.dev.yaml  docker-compose.yaml  install.sh  package-lock.json  package.json
.claude/skills/: composition-patterns.md  python-backend.md  react-best-practices.md  react-view-transitions.md  skills-lock.json
.decisions/: decision-001-collapsed-layout.html  decision-001-ui-concept.html  decision-002-expanded-layout.html  decision-003-actions-interactions.html  decisions.json  index.html
app/: .dockerignore  Dockerfile  alembic.ini  config.yaml  requirements-api.txt  requirements-test.txt  requirements-worker.txt  requirements.txt
app/crate/: __main__.py  (+80 more)
docs/: README.md  api.md  architecture.md  audio-analysis.md  dedicated-laptop-deployment.md  enrichment.md
librarian/: .dockerignore  Dockerfile
scripts/: benchmark_scan_paths.py  compare_rust_scan.py  deploy-remote.sh  deploy.sh  postgres_perf_snapshot.py  regression_smoke.py  setup-local-dns.sh
tools/: export_panns_onnx.py
tools/grooveyard-bliss/: .gitignore  Cargo.toml  Dockerfile
tools/grooveyard-bliss/src/: analyze.rs  bliss.rs  lib.rs  main.rs  ml.rs  scan.rs
tools/grooveyard-bliss/tests/: analyze_tests.rs  bliss_tests.rs  scan_tests.rs
tools/grooveyard-bliss/tests/common/: mod.rs
(+1477 files in other folders)
