[package]
name = "grooveyard-bliss"
version = "0.1.0"
edition = "2021"
description = "Audio feature extraction using bliss-rs for Grooveyard"

[dependencies]
bliss-audio = { version = "0.10", default-features = false, features = ["aubio-static", "symphonia-all", "library"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
